--- a/src/_includes/style.css
+++ b/src/_includes/style.css
@@ -1,6 +1,6 @@
 :root {
   /* COLORS */
-  --newsprint: #E1DFDD;
+  --newsprint: #e7e6e4;
   --red: hsl(11, 100%, 33%);
   --charcoal: #333;
   --purple: rgb(130,0,183);
@@ -9,6 +9,7 @@
 
   /* TYPOGRAPHY SCALES */
   /* @link https://utopia.fyi/type/calculator?c=320,16,1.2,1240,20,1.25,6,1,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+  --step--2: clamp(0.6944rem, 0.6577rem + 0.1836vw, 0.8rem);
   --step--1: clamp(0.8333rem, 0.7754rem + 0.2899vw, 1rem);
   --step-0: clamp(1rem, 0.913rem + 0.4348vw, 1.25rem);
   --step-1: clamp(1.2rem, 1.0739rem + 0.6304vw, 1.5625rem);
@@ -63,7 +64,7 @@ body {
   margin: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, .header-title .h1 {
   font-family: "League Gothic", serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -78,13 +79,22 @@ small {font-size: var(--step--1);}
 .lead {
   font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
   font-size: var(--step-1);
-  /* font-style: italic; */
 }
+.byline {
+  font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
+  font-size: var(--step-0);
+  text-transform: uppercase;
+}
+.heading-group {
+  border-bottom: 1px solid var(--charcoal);
+  padding-bottom: 8px;
+}
+.heading-group .byline {margin-top: 0;}
 .date {
   font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
   text-transform: uppercase;
 }
-h1 { font-size: var(--step-6); }
+h1, .header-title .h1 { font-size: var(--step-6); }
 h2 { font-size: var(--step-4); }
 h3 { font-size: var(--step-3); }
 h4 { font-size: var(--step-2); }
@@ -125,7 +135,15 @@ a:has(svg) {
   padding-inline: var(--grid-gutter);
   margin-inline: auto;
 }
-.u-container > * + * { margin-top: var(--flow-space, 1em);}
+.flow > * + * { margin-top: var(--flow-space, 1em);}
+.text-container {
+  margin: 0 auto;
+  max-width: 65ch;
+}
+.u-flex {
+  display: flex;
+  gap: var(--grid-gutter);
+}
 .u-grid {
   display: grid;
   gap: var(--grid-gutter);
@@ -150,15 +168,45 @@ a:has(svg) {
 }
 
 /* NAV */
-header {
-  border-bottom: 1px solid var(--charcoal);
+header {text-align: center;}
+.header-title {
+  display: inline-grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  gap: 0 14px;
+  margin: 1em 0;
+  text-align: left;
+}
+@media screen and (max-width: 410px) {
+  .header-title {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+  }
+}
+.header-title h1, .header-title .h1 {
+  line-height: 1.1;
+  margin: 0;
+}
+.header-title a {
+  text-decoration: none;
+}
+.header-title img {
+  grid-row: 1 / 3;
+  width: var(--step-6);
+}
+.header-title p:not(.h1) {
+  font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
+  font-size: clamp(0.6rem, 0.6577rem + 0.1836vw, 0.8rem);
+  margin: 0;
+  text-transform: uppercase;
 }
 nav {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: flex-end;
+  border-top: 1px solid var(--charcoal);
+  border-bottom: 3px double var(--charcoal);
   font-family: "League Gothic", sans-serif;
+  margin: 0 !important;
   text-transform: uppercase;
 }
 nav img {
@@ -168,13 +216,14 @@ nav img {
 nav h1 {margin: 0;}
 nav ul {
   display: flex;
+  justify-content: center;
   font-size: var(--step--1);
-  gap: var(--grid-gutter);
+  gap: 8px;
+  margin: 6px 0;
 }
 nav a {
-  border-block-end: 3px solid var(--border-color, transparent);
   color: var(--default-color);
-  text-decoration: none;
+  padding: 6px;
 }
 nav a[aria-current="page"] {
   color: var(--primary-color);
@@ -192,10 +241,8 @@ footer {
   padding-bottom: var(--grid-gutter);
 }
 footer .u-flex {
-  display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: var(--grid-gutter);
   margin-top: var(--grid-gutter);
 }
 [data-lastpass-icon-root] {
@@ -248,8 +295,35 @@ footer input[type="submit"] {
   color: var(--charcoal);
 }
 
-.art-grid {
+.image-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
   gap: var(--grid-gutter);
+}
+
+main:has(aside) {
+  padding-top: 12px;
+}
+@media screen and (min-width: 780px) {
+  main:has(aside) {
+    display: grid;
+    grid-template-columns: 1fr 300px;
+  }
+
+  aside {
+    border-left: 1px solid var(--charcoal);
+    padding-left: 12px;
+    font-size: var(--step--1);
+  }
+  aside p { font-size: var(--step--1); }
+  aside h2 { font-size: var(--step-3); }
+  aside h3 {
+    border-top: 1px solid var(--charcoal);
+    font-size: var(--step-2);
+    padding-top: 12px;
+  }
+
+  section {
+    padding-right: 12px;
+  }
 }
