--- a/src/index.njk
+++ b/src/index.njk
@@ -1,20 +1,27 @@
 ---
 layout: layouts/base.njk
-title: Sia Karamalegos
-description: Sia Karamalegos, figure drawing and landscape artist
+title: PerformanceObserver | Virtual web perf meetup
+description: Join the PerformanceObserver virtual performance meetup to get all the latest web performance news and hang out with the community.
 ---
 
-<h1>PerformanceObserver</h1>
-<p class="lead">A virtual meetup for the web performance community</p>
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas minima repellat impedit molestiae iusto expedita suscipit eius vel fugit, quibusdam deserunt ab ea esse voluptate, adipisci illum veniam quam laudantium.</p>
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas minima repellat impedit molestiae iusto expedita suscipit eius vel fugit, quibusdam deserunt ab ea esse voluptate, adipisci illum veniam quam laudantium.</p>
+<section>
+  <h2>Upcoming events</h2>
+  <p class="date">12 January 2025 12:00 pm</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto consequuntur officiis libero provident, nobis necessitatibus ullam quae officia minus, aperiam tempore sapiente vitae temporibus. Saepe quae accusantium voluptate alias incidunt.</p>
 
-<h2>Upcoming events</h2>
-<p class="date">12 January 2025 12:00 pm</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto consequuntur officiis libero provident, nobis necessitatibus ullam quae officia minus, aperiam tempore sapiente vitae temporibus. Saepe quae accusantium voluptate alias incidunt.</p>
+  <h2>Upcoming events</h2>
+  <p><em>12 January 2025 12:00 pm</em></p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto consequuntur officiis libero provident, nobis necessitatibus ullam quae officia minus, aperiam tempore sapiente vitae temporibus. Saepe quae accusantium voluptate alias incidunt.</p>
+</section>
 
-<h2>Upcoming events</h2>
-<p><em>12 January 2025 12:00 pm</em></p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto consequuntur officiis libero provident, nobis necessitatibus ullam quae officia minus, aperiam tempore sapiente vitae temporibus. Saepe quae accusantium voluptate alias incidunt.</p>
-
-
+<aside>
+  <h2>About</h2>
+  <h3>Mission</h3>
+  <p>PerformanceObserver is a virtual meetup for the web performance community.</p>
+  <p>Our community is spread out around the world, and not everyone can easily access in-person tech events. Thus, our mission was to create a meetup that is more accessible to the broader community.</p>
+  <h3>How do I register?</h3>
+  <p>You don't! We simplified the idea of the meetup since we weren't interested in collecting registration data. Instead, we share the zoom link via the calendar event which is available on this website and in emails from our newsletter.</p>
+  <h3>About the organizers</h3>
+  <p><strong>Estela Franco</strong> is a Web Performance and Technical SEO Specialist. She works as a Web Performance Technical Architect at Shopify and is a Google Developer Expert in Web Technologies and Storyblok Ambassador.</p>
+  <p><strong>Sia Karamalegos</strong> is a freelance web developer and performance engineer. She's also an international conference speaker, writer, and Google Developer Expert in Web Technologies. She co-organizes PerformanceObserver as well as the Eleventy Meetup.</p>
+</aside>
