Add favicons, fix focus color

--- a/src/_includes/style.css
+++ b/src/_includes/style.css
@@ -105,7 +105,7 @@ h2 { font-size: var(--step-4); }
 h3 { font-size: var(--step-3); }
 h4 { font-size: var(--step-2); }
 :focus {
-  outline: 2px dashed var(--purple);
+  outline: 2px dashed var(--yellow);
   outline-offset: .25rem;
 }
 figure { margin: 0; }
