--- a/src/contact.njk
+++ b/src/contact.njk
@@ -6,7 +6,7 @@ description: How to contact the artist Sia Karamalegos including through social 
 
 <h1>Contact</h1>
 <!-- TODO: change email and socials maybe remove form and just do email -->
-<p>To contact use, email us at <a href="mailto:hi@sia.studio" target="_blank">hi@sia.studio</a>, message me on <a href="https://www.instagram.com/sia.karamalegos/" target="_blank">Instagram</a>, or use the form below to send me a message:</p>
+<p>To contact us, use the form below to send us a message:</p>
 
 <form name="contact" netlify netlify-honeypot="bot-field">
   <input type="text" name="bot-field">
