More event and person styles, fix title tags

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     {%- if title -%}
-      {% set appendedTitle = title + " | sia.studio" %}
+      {% set appendedTitle = title + " | PerformanceObserver" %}
     {%- endif -%}
     {% set renderTitle = renderData.title or appendedTitle %}
     {% set renderDescription = renderData.description or description %}
