--- a/src/_includes/style.css
+++ b/src/_includes/style.css
@@ -344,9 +344,13 @@ main:has(aside) {
 
 /* event and talk and person */
 .event {
-  border: 1px solid var(--charcoal);
-  padding: var(--grid-gutter);
   margin: var(--grid-gutter) 0;
+}
+@media screen and (min-width: 400px) {
+  .event {
+    border: 1px solid var(--charcoal);
+    padding: var(--grid-gutter);
+  }
 }
 .event h3 {
   margin-top: 0;
@@ -354,29 +358,39 @@ main:has(aside) {
 .talk-cards {
   border-top: 1px solid var(--charcoal);
   display: grid;
-  grid-template-columns: minmax(300px, 1fr) minmax(300px, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(290px,1fr));
   gap: var(--grid-gutter);
 }
-.person-headline {
+.person-card { container-type: inline-size; }
+.person-grid {
+  border-bottom: 1px solid var(--charcoal);
+  border-top: 1px solid var(--charcoal);
   display: grid;
   gap: 1.5em;
   grid-template-columns: auto 1fr;
   margin-top: var(--grid-gutter);
+  padding: calc(var(--grid-gutter) / 2 ) 0;
 }
-.speaker-name {
-  font-family: var(--font-display);
-  font-size: var(--step-2);
+/* If the container is smaller than 380px */
+@container (max-width: 380px) {
+  .person-card .person-grid {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.person-grid p {
   margin-top: 0;
 }
-.person-card img {
-  filter: grayscale(60%);
-  border: 1px solid var(--charcoal);
+.person-card .headshot {
+  aspect-ratio: 1;
   border-radius: 50%;
-  width: 100px; /* fallback */
-  width: min(100px, 20vw);
-}
-.person-card img:hover {
-  filter: none;
+  position: relative;
+  width: 120px;
+  filter: contrast(2);
+  overflow: hidden;
+  position: relative;
+  background-blend-mode: screen;
 }
 .person-social {
   display: flex;
@@ -384,8 +398,8 @@ main:has(aside) {
   gap: 12px;
   font-family: var(--font-byline);
   font-size: var(--step--1);
+  justify-content: space-between;
   line-height: 1;
-  margin-top: 0;
   text-transform: uppercase;
 }
 .person-social a {
