--- a/src/contact.njk
+++ b/src/contact.njk
@@ -1,12 +1,12 @@
 ---
 layout: layouts/base.njk
-title: Contact Sia Karamalegos
-description: How to contact the artist Sia Karamalegos including through social media, email, and via contact form
+title: Contact us
+description: How to contact the the organizers of PerformanceObserver including through social media, email, and via contact form
 ---
 
 <h1>Contact</h1>
 <!-- TODO: change email and socials maybe remove form and just do email -->
-<p>To contact us, use the form below to send us a message:</p>
+<p>To contact us, message the organizers on other platforms, email us at <a href="mailto:info@performanceobserver.dev" rel="nofollow">info@performanceobserver.dev</a>, or use the form below to send us a message:</p>
 
 <form name="contact" netlify netlify-honeypot="bot-field">
   <input type="text" name="bot-field">
