--- a/src/events.njk
+++ b/src/events.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/base.njk
-title: Events | PerformanceObserver
+title: Events
 description: See upcoming and past virtual meetup events for the PerformanceObserver web performance meetup.
 ---
 
