--- a/src/index.njk
+++ b/src/index.njk
@@ -1,7 +1,8 @@
 ---
 layout: layouts/base.njk
-title: PerformanceObserver | Virtual web perf meetup
 description: Join the PerformanceObserver virtual performance meetup to get all the latest web performance news and hang out with the community.
+renderData:
+  title: "PerformanceObserver: A virtual web perf meetup"
 ---
 
 <section>
