Testing date parsing

--- a/src/_includes/event.njk
+++ b/src/_includes/event.njk
@@ -1,4 +1,4 @@
-{% set dateTime = event.content.start_time %}
+{% set dateTime = event.startTimeUTC %}
 
 <article class="event flow">
   <h2>{{ event.content.title }}</h2>
