--- a/src/_includes/event.njk
+++ b/src/_includes/event.njk
@@ -1,7 +1,7 @@
 {% set dateTime = event.startTimeUTC %}
 
 <article class="event flow">
-  <h2>{{ event.content.title }}</h2>
+  <h3>{{ event.content.title }}</h3>
   <p class="date"><time datetime="{{dateTime}}">{{dateTime | readableDateTime}}</time></p>
   <p>{{ event.content.overview | safe }}</p>
   <ul>
@@ -10,3 +10,26 @@
     {% endfor %}
   </ul>
 </article>
+
+<script>
+  function convertTime() {
+    const timeNodes = document.querySelectorAll("time");
+
+    timeNodes.forEach((node) => {
+      const date = new Date(node.dateTime);
+      const newLocaleString = date.toLocaleString([], {
+        // timeStyle: "long",
+        // dateStyle: "medium",
+        day: '2-digit',
+        month: "short",
+        year: "numeric",
+        hour: "numeric",
+        minute: "numeric",
+        timeZoneName: "short",
+      });
+      node.textContent = newLocaleString;
+    });
+  }
+
+  convertTime()
+</script>
