--- a/src/index.njk
+++ b/src/index.njk
@@ -6,13 +6,16 @@ renderData:
 ---
 
 <section>
-  <h2>Upcoming events</h2>
-  <p class="date">12 January 2025 12:00 pm</p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto consequuntur officiis libero provident, nobis necessitatibus ullam quae officia minus, aperiam tempore sapiente vitae temporibus. Saepe quae accusantium voluptate alias incidunt.</p>
-
-  <h2>Upcoming events</h2>
-  <p><em>12 January 2025 12:00 pm</em></p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto consequuntur officiis libero provident, nobis necessitatibus ullam quae officia minus, aperiam tempore sapiente vitae temporibus. Saepe quae accusantium voluptate alias incidunt.</p>
+  <h2 class="h1">Upcoming events</h2>
+  {% set upcomingEvents = events | upcomingEvents %}
+  {% set starting_h_level = 'h3' %}
+  {% if upcomingEvents and upcomingEvents.length > 0 %}
+    {% for event in upcomingEvents %}
+      {% include 'upcomingEvent.njk' %}
+    {% endfor %}
+  {% else %}
+    <p>Stay tuned for the next event announcement!</p>
+  {% endif %}
 </section>
 
 <aside>
@@ -26,3 +29,26 @@ renderData:
   <p><strong>Estela Franco</strong> is a Web Performance and Technical SEO Specialist. She works as a Web Performance Technical Architect at Shopify and is a Google Developer Expert in Web Technologies and Storyblok Ambassador.</p>
   <p><strong>Sia Karamalegos</strong> is a freelance web developer and performance engineer. She's also an international conference speaker, writer, and Google Developer Expert in Web Technologies. She co-organizes PerformanceObserver as well as the Eleventy Meetup.</p>
 </aside>
+
+<script>
+  function convertTime() {
+    const timeNodes = document.querySelectorAll("time");
+
+    timeNodes.forEach((node) => {
+      const date = new Date(node.dateTime);
+      const newLocaleString = date.toLocaleString([], {
+        // timeStyle: "long",
+        // dateStyle: "medium",
+        day: '2-digit',
+        month: "short",
+        year: "numeric",
+        hour: "numeric",
+        minute: "numeric",
+        timeZoneName: "short",
+      });
+      node.textContent = newLocaleString;
+    });
+  }
+
+  convertTime()
+</script>
