Add cfp, 404 pages, make organizers pull from CMS

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -59,7 +59,7 @@
         <ul role="list">
           <li><a aria-current="{% if page.url == '/' %}page{% else %}false{% endif %}" href="/">Home</a></li>
           <li><a aria-current="{% if page.url == '/events/' %}page{% else %}false{% endif %}" href="/events/">Events</a></li>
-          <!-- <li><a aria-current="{% if page.url == '/talks/' %}page{% else %}false{% endif %}" href="/talks/">Talks</a></li> -->
+          <li><a aria-current="{% if page.url == '/call-for-papers/' %}page{% else %}false{% endif %}" href="/call-for-papers/">CFP</a></li>
           <li><a aria-current="{% if page.url == '/codeofconduct/' %}page{% else %}false{% endif %}" href="/codeofconduct/">Code of Conduct</a></li>
         </ul>
       </nav>
