--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -20,15 +20,14 @@
       {{ css | cssmin | safe }}
     </style>
 
-    <!-- TODO: add social images -->
     <meta property="og:description" content="{{ renderDescription }}">
-    <!-- <meta property="og:url" content="https://sia.studio{{ page.url }}"> -->
+    <meta property="og:url" content="https://performanceobserver.dev{{ page.url }}">
     <meta property="og:title" content="{{ renderTitle }}">
-    <!-- <meta property="og:site_name" content="Sia Karamalegos | Artist"> -->
-    <!-- <meta property="og:image" content="">
+    <meta property="og:site_name" content="PerformanceObserver: A virtual webperf meetup">
+    <meta property="og:image" content="https://res.cloudinary.com/siacodes/image/upload/q_auto,f_auto,w_1280/v1607719366/performanceobserver/social_share_fr8mdz.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1280">
-    <meta property="og:image:height" content="640"> -->
+    <meta property="og:image:height" content="640">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
