--- a/src/index.njk
+++ b/src/index.njk
@@ -17,6 +17,9 @@ renderData:
     <p>Stay tuned for the next event announcement!</p>
   {% endif %}
 
+  <h2 class="h1 border-double-top">2025 Sponsor</h2>
+  <p><a class="sponsor" href="https://www.speedcurve.com/" rel="nofollow"><img src="/images/sc-logo-landscape.svg" loading="lazy" alt="SpeedCurve"></a></p>
+
   <h2 class="h1 border-double-top">Don't miss an event!</h2>
   <div class="coffee-container">
     <p>Sign up for our newsletter to get event announcements:</p>
